# interactive-wiw

./: .gitignore  README  README.md  launch_wiw.py  mkdocs.yml  pyproject.toml  requirements.txt  run.py  run_app.sh  setup.py  spread_viz.py  spread_viz.spec
.github/workflows/: build_all.yaml  build_windows.yaml  docs.yml  pyinstaller.yaml
app/: __init__.py  app.py  callbacks.py  dash_logger.py  graph_elements.py  ids.py  my_callbacks.py  utils.py
app/callbacks/: __init__.py  clientside_callbacks.py  data_upload_callbacks.py  export_callbacks.py  graph_callbacks.py  modal_callbacks.py  ui_state_callbacks.py
app/layouts/: __init__.py  graph_option_tabs.py  modal.py  upload_tabs.py
docs/: faq.md  index.md  installation.md  interface-overview.md
docs/developer/: running-from-source.md
docs/tutorials/: BREATH.md  custom-CSV.md  outbreaker2.md  transphylo.md
docs/user-guide/: interface-overview.md
paper/: Makefile  README.md  _quarto.yml  add_line_numbers.py  interactiveWhoInfectedWhom.qmd  journal-template.docx  references.bib
src/wiw_app/: app.py  config.py  dash_logger.py  graph_elements.py  ids.py  utils.py  validators.py
wiw_app/: app.py  dash_logger.py  graph_elements.py  ids.py  plotting_utils.py  utils.py
wiw_app/callbacks/: __init__.py  clientside_callbacks.py  data_upload_callbacks.py  export_callbacks.py  filename_display_upload.py  graph_callbacks.py  modal_callback_factory.py  ui_state_callbacks.py  upload_mode_rendering.py
wiw_app/layouts/: __init__.py  breath_upload.py  breath_upload_tabs.py  custom_csv_upload.py  graph_option_tabs.py  (+7 more)
(+56 files in other folders)
